--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,16 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "${workspaceRoot}\\node_modules\\.bin\\tsc",
     "isShellCommand": true,
-    "args": ["-p", ".\\src"],
     "showOutput": "silent",
-    "problemMatcher": "$tsc"
+    "args": [],
+    "tasks": [
+        {
+            "taskName": "Build Type Script",
+            "suppressTaskName": true,
+            "isBuildCommand": true,
+            "command": "${workspaceRoot}\\node_modules\\.bin\\tsc.cmd",
+            "args": ["-p", ".\\src"]
+        }
+    ]    
 }
