--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "publish" : "rm -rf dist & tsc -p ./src & uglifyjs dist/browsers/base/*.js dist/browsers/*.js dist/*.js -o dist/kiosk.min.js -m -c;"
+    "publish": "rm -rf dist & tsc -p ./src & uglifyjs dist/browsers/base/*.js dist/browsers/*.js dist/*.js -o dist/kiosk.min.js -m -c;"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vkural/kiosk#readme",
   "dependencies": {
-    "typescript": "^2.3.3"
+    "typescript": "^2.3.3",
+    "uglify-js": "^3.0.15"
   }
 }
